// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionLink /> with additional className matches its snapshot 1`] = `
<NavigationLink
  ariaLabel="Download the file"
  className="y-actionLink TEST_CLASSNAME"
  href="https://yammer.com"
>
  <FixedGridRow
    className="y-actionLink--wrapper"
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        className="y-actionLink--icon"
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block
        textSize="mediumSub"
      >
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</NavigationLink>
`;

exports[`<ActionLink /> with href passed matches its snapshot 1`] = `
<NavigationLink
  ariaLabel="Download the file"
  className="y-actionLink"
  href="https://yammer.com"
  newWindow={true}
>
  <FixedGridRow
    className="y-actionLink--wrapper"
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        className="y-actionLink--icon"
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block
        textSize="mediumSub"
      >
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</NavigationLink>
`;

exports[`<ActionLink /> with onClick passed matches its snapshot 1`] = `
<Clickable
  ariaLabel="Download the file"
  block={true}
  className="y-actionLink"
  onClick={[MockFunction]}
>
  <FixedGridRow
    className="y-actionLink--wrapper"
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        className="y-actionLink--icon"
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block
        textSize="mediumSub"
      >
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</Clickable>
`;
